<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.anthony.farmaciacliente.Login">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_usuario"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/loginNombreUsuario" />

        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contra"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/loginPassw" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="match_parent">

            <Button
                android:text="@string/ingresar"
                android:layout_width="174dp"
                android:textColor="#ffff"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_circle"
                android:id="@+id/loginBtn" />

            <Button
                android:layout_marginTop="15dp"
                android:text="@string/registro"
                android:textColor="#ffff"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_circle"
                android:id="@+id/loginRegBtn" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
